--- a/public/css/large.css
+++ b/public/css/large.css
@@ -76,7 +76,6 @@
         border-radius: 5px;
         padding: 0 20px 20px 20px;
         margin-bottom: 20px;
-        text-wrap: balance;
     }
 
     #questions {
@@ -88,6 +87,6 @@
     }
 
     .answer {
-        padding: 0 30px;
+        padding: 0 40px;
     }
 }
