--- a/public/css/style.css
+++ b/public/css/style.css
@@ -31,6 +31,10 @@ body {
     background-color: var(--main-bg-color);
 }
 
+h1, h2, h3, h4, h5, h6 {
+    text-wrap: balance;
+}
+
 h1 {
     color: var(--blue);
     font-size: 3.5rem;
@@ -48,6 +52,7 @@ summary {
 }
 
 p {
+    text-wrap: pretty;
     color: var(--red);
 }
 
